# vggsound-pipeline

./: .gitignore  IMPLEMENTATION_DETAILS.md  README.md  pyproject.toml
notebooks/: demo.ipynb
src/vggsound_pipeline/: __init__.py  captioner.py  cli.py  config.py  extraction.py  label_filter.py  multimodal.py  music_detector.py  pipeline.py  speech_detector.py  validation.py
src/vggsound_pipeline/qwenvl/data/: dataset.py  image_processing_qwen2_vl_fast.py
src/vggsound_pipeline/qwenvl/model/: attn_utils.py  configuration_qwen2_5_vl.py  modeling_bert.py  modeling_qwen2_5_vl.py  modeling_whisper.py
tests/: __init__.py  test_pipeline.py
