[project]
name = "vggsound-pipeline"
version = "0.1.0"
description = "Filter VGGSound for sound effects with ML-based classification"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.0,<2.3",
    "torchaudio>=2.0,<2.3",
    "transformers>=4.40",
    "typer>=0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "orjson>=3.9",
    "tqdm>=4.65",
    "ffmpeg-python>=0.2",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov"]
gpu = [
    "accelerate>=0.27",
    "bitsandbytes>=0.42",
]

[project.scripts]
vggsound = "vggsound_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vggsound_pipeline"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
