[project]
name = "vggsound-pipeline"
version = "0.1.0"
description = "Filter VGGSound for sound effects with ML-based classification"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40",
    "typer>=0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "orjson>=3.9",
    "tqdm>=4.65",
    "ffmpeg-python>=0.2",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov"]
cpu = [
    "torch>=2.6",
    "torchaudio>=2.6",
    "accelerate>=0.27",
    # No bitsandbytes - on macOS it runs on CPU (not MPS), so fp16 on MPS is faster
]
cu121 = [
    "torch>=2.6",
    "torchaudio>=2.6",
    "accelerate>=0.27",
    "bitsandbytes>=0.44",
]
cu124 = [
    "torch>=2.6",
    "torchaudio>=2.6",
    "accelerate>=0.27",
    "bitsandbytes>=0.44",
]

[project.scripts]
vggsound = "vggsound_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vggsound_pipeline"]

[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux'",
]
conflicts = [
    [{ extra = "cpu" }, { extra = "cu121" }, { extra = "cu124" }],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'", extra = "cpu" },
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'", extra = "cu121" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'", extra = "cu124" },
]
torchaudio = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'", extra = "cpu" },
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'", extra = "cu121" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
